--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
     />
   </head>
   <body>
+    <div id="home"></div>
     <div class="maincontainer">
       <nav>
         <div class="cont1">
           <h1>Siyath</h1>
         </div>
         <ul class="ultags">
-          <a href="#"><li>Home</li></a>
-          <a href="#"><li>About</li></a>
-          <a href="#"><li>Skills</li></a>
+          <a href="#home"><li>Home</li></a>
+          <a href="#about"><li>About</li></a>
+          <a href="#skills"><li>Skills</li></a>
           <a href="#"><li></li></a>
-          <a href="#"><li>Contact</li></a>
+          <a href="#contact"><li>Contact</li></a>
         </ul>
         <div class="cont2">
           <div class="arrow1"></div>
@@ -56,6 +57,7 @@
     </div>
     <br />
     <br />
+    <div id="skills"></div>
     <div class="bottommain">
       <div class="bottomcont">
         <div class="imgcont">
@@ -90,7 +92,7 @@
                 <a href="#"
                   ><i class="fa-brands fa-facebook" style="color: #000000"></i
                 ></a>
-                <a href="#"
+                <a href="https://www.instagram.com/the_unfaced_?igsh=MXdpaWZnOHgyYnViZw=="
                   ><i class="fa-brands fa-instagram" style="color: #000000"></i
                 ></a>
                 <a href="#"
@@ -120,9 +122,9 @@
     <br />
     <br />
     <br />
+    <div id="about"></div>
     <br />
     <br />
-
     <div class="mainservice">
       <div class="service">
         <h2>SERVICES</h2>
@@ -253,6 +255,7 @@
         </div>
       </div>
     </div>
+    <div id="contact"></div>
     <br />
     <br />
     <br />
