--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                 <a href="#"
                   ><i class="fa-brands fa-facebook" style="color: #000000"></i
                 ></a>
-                <a href="https://www.instagram.com/the_unfaced_?igsh=MXdpaWZnOHgyYnViZw=="
+                <a
+                  href="https://www.instagram.com/the_unfaced_?igsh=MXdpaWZnOHgyYnViZw=="
                   ><i class="fa-brands fa-instagram" style="color: #000000"></i
                 ></a>
                 <a href="#"
@@ -281,7 +282,7 @@
       </div>
       <div class="inputsection2">
         <input type="submit" value="SEND MESSGAGE" id="inp4" />
-        <i class="fa-solid fa-arrow-up" style="color: #ffffff"></i>
+        <a href="#home"><i class="fa-solid fa-arrow-up" style="color: #ffffff"></i></a>
       </div>
     </div>
     <br />
