--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="maincontainer">
       <nav>
         <div class="cont1">
-          <h1>Siyath</h1>
+          <h1>Jones</h1>
         </div>
         <ul class="ultags">
           <a href="#home"><li>Home</li></a>
@@ -51,7 +51,7 @@
         class="videos"
       ></video>
       <div class="textcont">
-        <h1>Siyath</h1>
+        <h1>Jones</h1>
         <h2>Web Devoloper</h2>
       </div>
     </div>
@@ -61,7 +61,7 @@
     <div class="bottommain">
       <div class="bottomcont">
         <div class="imgcont">
-          <img src="image\IMG_20240411_232815_285.jpg" />
+          <img src="image/2dea7f08-034e-4203-9f4a-7aa6c33d86b0.png" />
         </div>
         <br />
         <div class="split0">
@@ -69,9 +69,9 @@
             <h2>BIOGRAPHY</h2>
             <br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-              aliquid optio repudiandae inventore sint ratione repellat hic,
-              illo possimus, culpa vel explicabo exercitationem amet fugit!
+              I'm a web developer passionate about creating clean, responsive,
+              and user-friendly websites. I work with modern tools like HTML,
+              CSS, JavaScript to bring ideas to life on the web.
             </p>
           </div>
           <br />
@@ -140,9 +140,9 @@
               >Design
             </h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-              laudantium nulla nemo iure voluptas porro dolores eligendi earum
-              cupiditate impedit!
+              Crafting modern, user-focused designs that are clean, responsive,
+              and visually engaging. I focus on UI/UX principles to ensure
+              seamless user experiences across all devices.
             </p>
           </div>
         </div>
@@ -154,9 +154,9 @@
               <i class="fa-solid fa-code" style="color: #ffffff"></i>Devolopment
             </h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-              laudantium nulla nemo iure voluptas porro dolores eligendi earum
-              cupiditate impedit!
+              Building fast, functional, and scalable websites using
+              technologies like HTML, CSS, JavaScript, and React. I deliver
+              clean code and optimized performance for every project.
             </p>
           </div>
         </div>
@@ -168,9 +168,9 @@
               >Marketing
             </h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-              laudantium nulla nemo iure voluptas porro dolores eligendi earum
-              cupiditate impedit!
+              Creating conversion-focused landing pages, integrating SEO best
+              practices, and ensuring your site supports your digital marketing
+              goals to help grow your online presence.
             </p>
           </div>
         </div>
@@ -196,9 +196,10 @@
           <h2>portfolio</h2>
           <h1>Recent <span>Works</span></h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe est
-            eligendi nobis pariatur aspernatur voluptas iure quo fugit
-            doloremque nam!
+            A modern, responsive website developed for a premium haircare brand.
+            Focused on clean design, smooth user experience, and mobile
+            optimization. Integrated product showcase, client testimonials, and
+            contact features to enhance brand presence and engagement.
           </p>
         </div>
         <div class="recent2">
@@ -226,9 +227,10 @@
             <h2>Best Designer of the Month</h2>
             <h5>2023</h5>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Similique error modi deserunt reprehenderit possimus. Animi
-              aliquam dolore laborum voluptate excepturi!
+              Recognized as Best Designer of the Month for delivering creative,
+              user-focused design solutions and consistently exceeding client
+              expectations. Awarded for attention to detail, innovation, and
+              design excellence.
             </p>
           </div>
         </div>
@@ -237,9 +239,9 @@
             <h2>The True Gem</h2>
             <h5>2023</h5>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Similique error modi deserunt reprehenderit possimus. Animi
-              aliquam dolore laborum voluptate excepturi!
+              Honored with the True Gem award for outstanding dedication,
+              reliability, and consistent performance across projects.
+              Recognized as a valuable team player with a strong work ethic.
             </p>
           </div>
         </div>
@@ -248,9 +250,9 @@
             <h2>First Class Performmer</h2>
             <h5>2023</h5>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Similique error modi deserunt reprehenderit possimus. Animi
-              aliquam dolore laborum voluptate excepturi!
+              Awarded First Class Performer for consistently delivering
+              high-quality work, meeting tight deadlines, and maintaining top
+              performance across multiple projects.
             </p>
           </div>
         </div>
@@ -282,7 +284,9 @@
       </div>
       <div class="inputsection2">
         <input type="submit" value="SEND MESSGAGE" id="inp4" />
-        <a href="#home"><i class="fa-solid fa-arrow-up" style="color: #ffffff"></i></a>
+        <a href="#home"
+          ><i class="fa-solid fa-arrow-up" style="color: #ffffff"></i
+        ></a>
       </div>
     </div>
     <br />
