--- a/index.html
+++ b/index.html
@@ -229,8 +229,7 @@
             <p>
               Recognized as Best Designer of the Month for delivering creative,
               user-focused design solutions and consistently exceeding client
-              expectations. Awarded for attention to detail, innovation, and
-              design excellence.
+              expectations.
             </p>
           </div>
         </div>
