--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
             <h5>2023</h5>
             <p>
               Recognized as Best Designer of the Month for delivering creative,
-              user-focused design solutions and consistently exceeding client
-              expectations.
+              user focused design solutions and consistently exceeding client
+              expectations,
             </p>
           </div>
         </div>
