--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <p>
               Recognized as Best Designer of the Month for delivering creative,
               user focused design solutions and consistently exceeding client
-              expectations,
+              expectations.
             </p>
           </div>
         </div>
